remove mp4 file

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 *.mp4
 *.mov
 *.avi
+"htmlbasics/assets/video/Kabhi Alvida Naa Kehna 4K Video - Title Song _ Shahrukh, Rani, Preity, Abhishek _ Alka YagniK.mp4"
